grocy/grocy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apps

---
kind: Service
apiVersion: v1
metadata:
  name: grocy
  namespace: apps
  labels:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/instance: grocy
spec:
  selector:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/instance: grocy
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: apps
  labels:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/instance: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
      app.kubernetes.io/instance: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
        app.kubernetes.io/instance: grocy
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/hostname: delacroix
      containers:
        - name: grocy
          imagePullPolicy: Always
          image: ghcr.io/linuxserver/grocy:arm64v8-latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/config"
            - name: data
              mountPath: /var/www/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grocy-data
        - name: config
          persistentVolumeClaim:
            claimName: grocy-config
